[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
petgraph = "0.5.1"
strum_macros = "0.20.1"
strum = "0.20.0"
direction = "0.17.10"
radix_fmt = "1.0.0"
